overflow wave fix, sections to 4

--- a/src/partials/_buttons.scss
+++ b/src/partials/_buttons.scss
@@ -80,17 +80,39 @@ button {
   }
 }
 
-
+//Upcoming Events > btn event
 a,
 button {
   @include default_btn;
   &.btnlogoevent{
-    
     font-size: $font_sizebtn;
-    padding: 18px 40px;
+    padding: 8px 20px;
     transition: color $transition_duration;
     border-radius: 30px;
     display: flex;
     align-items: center;
+    color: $fontwhite;
+    background-color: $bgsalmon;
+    
+    -webkit-box-shadow: 0px 0px 50px 5px rgba(0,0,0,0.15); 
+    box-shadow: 0px 0px 50px 5px rgba(0,0,0,0.15);
+    &:hover{
+      background-color: $bgyellow;
+    }
+    .logo_box{
+      margin-right: 8px;
+    }
+  }
+}
+input{
+  @include default_btn;
+  padding: 18px 20px;
+  transition: color $transition_duration;
+  border-radius: 30px;
+  border: none;
+  display: flex;
+  align-items: center;
+  .logo_box{
+    margin-right: 8px;
   }
 }
