--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,5 +1,4 @@
 //font
-$colorfontblue: #3E5097;
 $font_primary: 'Fredoka One', cursive;
 $font_secondary:'Open Sans', sans-serif;
 
@@ -14,6 +13,7 @@ $font_sizeh1: 48;
 $font_sizeh2: 38;
 $font_sizeh3: 16;
 $font_sizeh4: 22;
+$font_sizeh5: 30;
 
 $line_height: 1.8;
 $fontbold: 800;
